--- a/.github/workflows/main_app-001-step3-1-suzuyu-node-34.yml
+++ b/.github/workflows/main_app-001-step3-1-suzuyu-node-34.yml
@@ -24,13 +24,24 @@ jobs:
           node-version: '20.x'
 
       - name: npm install, build, and test
+      #1
+        env:
+          NEXT_PUBLIC_API_ENDPOINT: ${{ secrets.NEXT_PUBLIC_API_ENDPOINT }}
         run: |
           npm install
           npm run build --if-present
           npm run test --if-present
 
+      #2
+      - name: Copy artifact for deployment job
+        run: |
+          mkdir deploy
+          cp -r ./.next/standalone/. ./deploy
+          cp -r ./.next/static/. ./deploy/.next/static
+
+      #3
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip release.zip ./deploy -r #3
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -60,5 +71,5 @@ jobs:
         with:
           app-name: 'app-001-step3-1-suzuyu-node-34'
           slot-name: 'Production'
-          package: .
+          package: ./deploy #4
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_B7C9B6448AE747CF9C0DC8ABAABFFFBE }}
